Changes to be committed: 	modified:   package-lock.json 	modified:   package.json 	modified:   src/App.js 	new file:   src/Axios.js 	new file:   src/forecastSlice.js 	modified:   src/helpers/ServiceList.js 	modified:   src/pages/About.js 	modified:   src/pages/Service.js 	modified:   src/styles/About.css 	modified:   src/styles/Service.css 	new file:   src/styles/image1.jpg 	new file:   src/styles/image2.jpg

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -34,6 +34,11 @@
   .aboutBottom span {
     width: auto;
     margin-bottom: auto;
+    font-size: 2vh;
+  }
+  .Spann{
+    text-align: center;
+    padding: 0 100px 0 100px;
   }
   
   /* .about .aboutBottom h1 {
