--- a/src/styles/Service.css
+++ b/src/styles/Service.css
@@ -1,5 +1,9 @@
 .services {
   width: 100%;
+  background: url("image2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   height: auto;
   display: flex;
   justify-content: center;
@@ -8,14 +12,18 @@
 }
 .services .servicesTitle {
   font-family: cursive;
-  font-size: 60px;
+  font-size: 40px;
 }
 
+.servicesTitle{
+  color: black;
+}
 .servicesList {
   width: 70vw;
   height: auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   place-items: center;
 }
 
@@ -26,6 +34,7 @@
   width: 300px;
   height: 350px;
   margin: 20px;
+  background: #fff;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
 }
 .servicesItem:hover {
@@ -51,6 +60,109 @@
   color: rgb(79, 74, 73);
 }
 
+.popupBackground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+.popup {
+  background: url("image1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(233, 234, 234, 0.906);
+  max-height: 88vh; 
+  overflow-y: auto;
+  scrollbar-width: thin; 
+  scrollbar-color: #4bdec3 #222; /* For Firefox */
+  scrollbar-width: thin;
+  scrollbar-color: #1af1c3 #222;
+  scrollbar-track-color: #222;
+  scrollbar-thumb-color: #4CAF50;
+  scrollbar-thumb-border-radius: 10px;
+}
+
+/* For Webkit based browsers (Chrome, Safari, etc.) */
+.popup::-webkit-scrollbar {
+  width: 10px;
+  
+}
+
+.popup::-webkit-scrollbar-thumb {
+  background-color: #4CAF50;
+  border-radius: 10px;
+}
+
+.popup::-webkit-scrollbar-track {
+  background-color: #222;
+  border-radius: 30px;
+}
+.popup::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+.popup h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.popupForm {
+  padding: 20px; 
+}
+
+.popupForm label {
+  color: wheat;
+  display: block;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+select {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  box-sizing: border-box;
+  font-size: 16px;
+  margin-top: 5px;
+}
+
+.spann{
+  text-align: center;
+  color: wheat;
+}
+.popupForm button {
+  background-color: rgb(120, 228, 192);
+  color: #222;
+  border-radius: 16px;
+}
+.spanButton{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.popupForm button:hover {
+  background-color: #1fcbf2;
+  box-shadow: 0px 0px 10px rgba(233, 234, 234, 0.906);
+
+}
+.fileInput {
+  margin-bottom: 10px;
+}
+
+.closeButton {
+  margin-top: 10px;
+}
 @media only screen and (max-width: 1300px) {
   .servicesList {
     grid-template-columns: 1fr 1fr;
